--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "scripts": {
     "start": "rm -rf tsconfig.json && react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf tsconfig.json && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
